--- a/templates/permission.html
+++ b/templates/permission.html
@@ -1,5 +1,7 @@
 <h1>Permission Page</h1>
-<form action="{{ url_for('age_detection') }}" method="post">
+
+<form action="{{ url_for('detect_age') }}" method="post">
+
     <p>Do you give permission to access the age detection feature?</p>
     <button type="submit" name="permission" value="yes">Yes</button>
     <button type="submit" name="permission" value="no">No</button>
