--- a/templates/index.html
+++ b/templates/index.html
@@ -285,7 +285,7 @@
 										
 										<div class="card-btn">
 											<!-- Add a form around the "Add to Cart" button -->
-											<form action="{{ url_for('addToCart') }}" method="post">
+											<form action="{{ url_for('insert_data') }}" method="post">
 												<!-- Hidden input fields to store product information -->
 												<input type="hidden" name="image_url" value="static/images/7 UP.jpg">
 												<input type="hidden" name="product_name" value="7 UP">
