--- a/templates/recommendation.html
+++ b/templates/recommendation.html
@@ -94,13 +94,13 @@
                                         <li class="nav-item">
                                             <div class="dropdown header">
     
-                                                <a class="nav-link" href="index.html">Home</a>
+                                                <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                                                   
                                             </div>										
                                         </li>
                                         <li class="nav-item">
                                             <div class="dropdown header">
-                                                <a class="nav-link" href="contact.html">Contact Us</a>
+                                                <a class="nav-link" href="{{ url_for('contact') }}">Contact Us</a>
                                                   
                                             </div>										
                                         </li>
