add age prediction code model

--- a/templates/permission.html
+++ b/templates/permission.html
@@ -28,11 +28,11 @@
     <div class="content">
         <h1>Permission Required</h1>
         <p>To proceed, please grant permission to access the age detection feature:</p>
-        <form action="/permission_response/yes" method="get">
-            <button type="submit">Yes</button>
-        </form>
-        <form action="/permission_response/no" method="get">
-            <button type="submit">No</button>
+        <form action="{{ url_for('detect_age') }}" method="post">
+    
+            <p>Do you give permission to access the age detection feature?</p>
+            <button type="submit" name="permission" value="yes">Yes</button>
+            <button type="submit" name="permission" value="no">No</button>
         </form>
     </div>
 </body>
