--- a/templates/harddrinks.html
+++ b/templates/harddrinks.html
@@ -44,9 +44,9 @@
                                         <i class="fa fa-user"></i>
                                     </a>
                                     <div class="dropdown-menu">
-											<a class="dropdown-item" href="{{ url_for('login') }}">Sign in</a>
+											<a class="dropdown-item" href="{{ url_for('users.login') }}">Sign in</a>
 
-											<a class="dropdown-item" href="{{ url_for('register') }}">Register</a>
+											<a class="dropdown-item" href="{{ url_for('users.register') }}">Register</a>
 
 									    </div>
                                 </div>
