--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,268 +1,67 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends 'base.html' %} {% block title %}Contact{% endblock %} {% block
+content %}
+<section id="contact-wrap">
+  <div class="container">
+    <h1 class="section-heading-wrap">Contact</h1>
+    <hr />
+    <div class="row">
+      <div class="col-md-5">
+        <div class="contact-form">
+          <div class="input-title">Name / Workplace</div>
+          <input
+            type="text"
+            name="name-work"
+            placeholder="eg. John / IT arrow"
+          />
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/all.min.css') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/owl.carousel.css') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/owl.theme.default.min.css') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/responsive.css') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-	
-	<link rel="stylesheet" href="{{ url_for('static', filename='font-awesome/css/all.min.css') }}">
+          <div class="input-title">Phone</div>
+          <input type="text" name="phone" placeholder="eg. 98XXXXXXXX" />
 
-	<title>Contact</title>
-	
-</head>
-<body>
-	<div id="app">
-		<header>
-			<div id="logo-header">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-4"></div>
-						<div class="col-md-4 text-center">
-							<a class="navbar-brand" href="#">
-								<img src="static/img/logo-removebg-preview.png" width="160"/>
-							</a>
-						</div>
-						<div class="col-md-4 my-auto text-right">
-							<div class="header-right ml-auto">
-								<form id="search-form">
-									<div class="search-box">
-										<input type="text" name="" class="search-input" placeholder="Search...."/> 
-										<button class="search-btn"><i class="fa fa-search"></i></button>
-									</div>						        
-								</form>
-								<div class="dropdown">
-									<a href="#" class="dropdown" data-toggle="dropdown">
-										<i class="fa fa-user"></i>
-									</a>
-									<div class="dropdown-menu">
-										<a class="dropdown-item" href="{{ url_for('login') }}">Sign in</a>
+          <div class="input-title">Email</div>
+          <input
+            type="email"
+            name="email"
+            placeholder="eg. example@gmail.com"
+          />
 
-										<a class="dropdown-item" href="{{ url_for('register') }}">Register</a>
+          <div class="input-title">Address</div>
+          <input type="text" name="address" placeholder="Baneshwor" />
 
-									</div>
-								</div>
-								
-								</div>
-							</div>
-							
-						</div>
-					</div>
-				</div>
-			</div>
+          <div class="input-title">Message</div>
+          <textarea
+            name="message"
+            rows="6"
+            placeholder="Type your Message*"
+          ></textarea>
+        </div>
+      </div>
+      <div class="col-md-7">
+        <div class="location">
+          <iframe
+            src="static/images/location.png"
+            width="100%"
+            height="390"
+            frameborder="0"
+            style="border: 0"
+            allowfullscreen=""
+          ></iframe>
+        </div>
+        <h3 class="section-heading-wrap">Our Branch Offices</h3>
+        <div class="branch-shop">
+          <div><i class="fa fa-map-marker-alt"> </i>Darbar Marg</div>
+          <div><i class="fa fa-phone-volume"> </i>+01-4257277</div>
+          <div><i class="fa fa-envelope"> </i>info@TasteTalescenter.com</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
+<script>
+  $('a[data-toggle="tab"]').on("shown.bs.tab", function (e) {
+    e.target; // newly activated tab
+    e.relatedTarget; // previous active tab
+  });
+</script>
 
-
-
-
-
-				<div id="main-menu">
-				<div class="container">
-
-					<nav class="navbar navbar-toggleable-md navbar-expand-lg">
-						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-							<i class="fa fa-bars"></i>
-						</button>			
-						<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-
-							<ul class="navbar-nav mx-auto">
-
-
-								<li class="nav-item">
-									<div class="dropdown header">
-
-										<a class="nav-link" href="index.html">Home</a>
-										  
-									</div>										
-								</li>
-								<li class="nav-item">
-									<div class="dropdown header">
-										<a class="nav-link" href="{{ url_for('contact') }}">Contact Us</a>
-										  
-									</div>										
-								</li>
-
-								<li class="nav-item">
-									<div class="dropdown header">
-										<a class="nav-link" href="#">Drinks</a>
-										<div class="dropdown-menu">
-											
-									    </div>
-									</div>										
-								</li>
-
-									</div>										
-								</li>
-							</ul>
-						</div>
-					</nav>
-				</div>
-			</div>
-		
-		</header>
-
-            <section id="contact-wrap">
-                <div class="container">
-                    <h1 class="section-heading-wrap">Contact</h1>
-                    <hr>
-                    <div class="row">
-                        <div class="col-md-5">
-                            <div class="contact-form">
-                                <div class="input-title">Name / Workplace</div>
-                                <input type="text" name="name-work" placeholder="eg. John / IT arrow">
-
-                                <div class="input-title">Phone</div>
-                                <input type="text" name="phone" placeholder="eg. 98XXXXXXXX">
-
-                                <div class="input-title">Email</div>
-                                <input type="email" name="email" placeholder="eg. example@gmail.com">
-                                
-                                <div class="input-title">Address</div>
-                                <input type="text" name="address" placeholder="Baneshwor">
-
-                                <div class="input-title">Message</div>
-                                <textarea name="message" rows="6" placeholder="Type your Message*"></textarea>
-                            </div>
-                        </div>
-                        <div class="col-md-7">
-                            <div class="location">
-                                <iframe src="static/images/location.png" width="100%" height="390" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-                            </div>
-                            <h3 class="section-heading-wrap">Our Branch Offices</h3>
-                            <div class="branch-shop">
-                                <div><i class="fa fa-map-marker-alt"> </i>Darbar Marg </div>
-                                <div> <i class="fa fa-phone-volume"> </i>+01-4257277</div>
-                                <div><i class="fa fa-envelope"> </i>info@TasteTalescenter.com</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </section>
-
-
-
-
-
-
-            <footer>
-				<div class="container">
-					<div id="footer-top">
-						<div class="row">
-							<div class="col-md-4 first">
-								<h4>Contact Details</h4>
-								<hr style="margin: 10px 0; border-top: 3px solid #009a46; width: 80px;">
-								<div><i class="fa fa-map-marker-alt"></i>Kathmandu, Nepal</div>
-								<div><i class="fa fa-phone"></i> +9779812345678/ +9779801234567</div>
-								<div><i class="fa fa-envelope"></i><a href="mailto:info@greeline.com">info@TasteTales.com</a></div>
-							</div>
-							<div class="col-md-4 second">
-								<h4>Quick Links</h4>
-								<hr style="margin: 10px 0; border-top: 3px solid #009a46; width: 80px;">
-								<p><a href="#">Home</a></p>
-								<p><a href="#">About Us</a></p>
-								<p><a href="#">Contact Us</a></p>
-							</div>
-							<div class="col-md-4 third">
-								<h4>Useful Links</h4>
-								<hr style="margin: 10px 0; border-top: 3px solid #009a46; width: 80px;">
-								<div class="social">
-									<p><a href="#">Offers</a></p>
-									<p><a href="#">Terms & Conditions</a></p>
-									<p><a href="#">Return Policy</a></p>
-									<p><a href="#">Privacy Policy</a></p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div id="footer-bottom">
-					<div class="container">
-						<div class="footer-social-section">
-							<div class="footer-social">
-								<div class="footer-social-text">
-									Find us on Social Media
-								</div>
-								<div class="footer-social-icons">
-									<a href="#" target="_blank">
-										<i class="fab fa-facebook-f"></i>
-									</a>
-									<a href="#" target="_blank">
-										<i class="fab fa-linkedin-in"></i>
-									</a>
-									<a href="#" target="_blank">
-										<i class="fab fa-twitter"></i>
-									</a>
-									<a href="#" target="_blank">
-										<i class="fab fa-instagram"></i>
-									</a>
-									<a href="#" target="_blank">
-										<i class="fab fa-youtube"></i>
-									</a>	
-								</div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-3">
-								<div class="payments-footer">
-									<img src="static/imgpayment.png"/>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="copyright">© 2023 Taste Tales Pvt. Ltd. All Rights Reserved.
-								</div>
-							</div>
-							
-						</div>
-					</div>
-				</div>
-			</footer>
-		
-		</div>
-		
-		<a id="back-to-top" href="#" class="btn back-to-top" role="button"><i class="fa fa-chevron-up"></i></a>	
-		
-		
-		<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='js/owl.carousel.js') }}"></script>
-
-
-
-		<script>
-			$(document).ready(function(){
-				$(window).scroll(function () {
-				if ($(this).scrollTop() > 50) {
-					$('#back-to-top').fadeIn();
-				} else {
-					$('#back-to-top').fadeOut();
-				}
-			});
-			// scroll body to 0px on click
-			$('#back-to-top').click(function () {
-				$('body,html').animate({
-					scrollTop: 0
-				}, 400);
-				return false;
-			});
-			});
-        </script>
-        <script>
-            $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
-            e.target // newly activated tab
-            e.relatedTarget // previous active tab
-            })
-        </script>
-        
-        
-	</body>
-</html>
-			
-			
+{% endblock %}
