--- a/templates/recommendation.html
+++ b/templates/recommendation.html
@@ -123,7 +123,7 @@
                                                      -->
                                                     
                                                     <!-- Your index page content -->
-                                                    <a href="{{ url_for('permission') }}" class="dropdown-item">Hard Drinks</a>
+                                                    <a href="{{ url_for('age_verification.verify_age') }}" class="dropdown-item">Hard Drinks</a>
     
                                                   </div>
                                             </div>										
@@ -132,7 +132,7 @@
     
                                         <li class="nav-item">
                                             <div class="dropdown header">
-                                                <a class="nav-link" href="{{ url_for('recommendation') }}">Search</a>
+                                                <a class="nav-link" href="{{ url_for('drinks.recommended') }}">Search</a>
                                                 
                                                   
                                             </div>										
