add to cart and checkout price

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -38,7 +38,7 @@ content %}
       <div class="col-md-7">
         <div class="location">
           <iframe
-            src="static/images/location.png"
+            src="/static/images/location.png"
             width="100%"
             height="390"
             frameborder="0"
