--- a/templates/about.html
+++ b/templates/about.html
@@ -28,7 +28,7 @@
             </div>
             <div class="col-md-7">
                 <div class="location">
-                    <iframe src="static/images/location.png" width="100%" height="390" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                    <iframe src="/static/images/location.png" width="100%" height="390" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                 </div>
                 <h3 class="section-heading-wrap">Our Branch Offices</h3>
                 <div class="branch-shop">
