--- a/templates/footer.html
+++ b/templates/footer.html
@@ -78,10 +78,8 @@
   </div>
 </footer>
 <a id="back-to-top" href="#" class="btn back-to-top" role="button"
-  ><i class="fa fa-chevron-up"></i
-></a>
-
-
+  ><i class="fa fa-arrow-up"></i>
+</a>
 
 <script>
   $(document).ready(function () {
@@ -104,5 +102,3 @@
     });
   });
 </script>
-
-
