--- a/templates/header.html
+++ b/templates/header.html
@@ -5,7 +5,7 @@
         <div class="col-md-4"></div>
         <div class="col-md-4 text-center">
           <a class="navbar-brand" href="#">
-            <img src="static/img/logo-removebg-preview.png" width="160" />
+            <img src="/static/img/logo-removebg-preview.png" width="160" />
           </a>
         </div>
         <div class="col-md-4 my-auto text-right">
@@ -30,6 +30,14 @@
                 <i class="fa fa-user"></i>
               </a>
               <div class="dropdown-menu">
+                <a class="dropdown-item" href="{{ url_for('carts.cart') }}"
+                  >Go to cart</a
+                >
+                <a
+                  class="dropdown-item"
+                  href="{{ url_for('orders.my_orders') }}"
+                  >My Orders</a
+                >
                 <a class="dropdown-item" href="{{ url_for('users.logout') }}"
                   >Logout</a
                 >
@@ -88,7 +96,9 @@
 
               <li class="nav-item">
                 <div class="dropdown header">
-                  <a class="nav-link" href="#">Drinks</a>
+                  <a class="nav-link" href="{{ url_for('drinks.drinks') }}"
+                    >Drinks</a
+                  >
                   <div class="dropdown-menu">
                     <a
                       class="dropdown-item"
